objects/OPS_Attachment__c.object
<CustomObject>
    <description>Object created to house OPS forms while maintaining PHI</description>
    <fields>
        <fullName>OPS_Request_Received__c</fullName>
        <formula>Offsite_Phlebotomy_Service__r.OPS_Request_Received__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OPS Request Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OPS_Status__c</fullName>
        <formula>TEXT(Offsite_Phlebotomy_Service__r.OPS_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OPS Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offsite_Phlebotomy_Service__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>OPS Request Number</inlineHelpText>
        <label>Offsite Phlebotomy Service</label>
        <referenceTo>Offsite_Phlebotomy_Service__c</referenceTo>
        <relationshipLabel>OPS Attachments</relationshipLabel>
        <relationshipName>OPS_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>OPS Attachment</label>
    <nameField>
        <label>OPS Attachment</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OPS Attachments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>